# trading_bot

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
.orchestrator/agent_configs/dashboard-engineer/: CLAUDE.md
backtesting/: latest_backtest.json  resolve.py  run_backtest.py  score.py  simulate.py
dashboard/: app.py
dashboard/pages/: 1_Overview.py  2_Data.py  3_Model.py  4_Signals.py  5_Backtesting.py  6_Pipeline.py
dashboard/utils/: db.py  paths.py
data/: audit.py  build_universe.py  build_universe.sh  ingest.py  migrate.py  normalize.py  run_ingest.py  run_universe_ingest.py  schema.py  setup_db.py  store.py  tickers.json  universe.py  universe_summary.md
data/diagnostics/: yf_diagnostic.py
docs/: model_performance_report.md
modeling/: MODEL_CARD.md  features.py  registry.py  run_training.py  train.py  train_variants.py
models/: model_v1.json  model_v2.json  model_v20260331_022019.json  model_v3.json  registry.py
pipeline/: flows.py  run_pipeline.py  scheduler.py
signals/: generate.py  run_signals.py
tests/: test_backtesting.py  test_data.py  test_modeling.py  test_signals.py  test_universe.py
