[project]
name = "trading-signals"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "prefect>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["data", "signals", "models", "modeling", "pipeline", "backtesting"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
